--- a/style.css
+++ b/style.css
@@ -5,9 +5,6 @@
     font-family: "Poppins", sans-serif;
 }
 body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
     min-height: 100vh;
 }
 .popup .picker{
@@ -18,7 +15,7 @@ body{
     justify-content: center;
 }
 .popup{
-    width: 350px;
+    width: 365px;
 }
 
 #color-picker{
@@ -34,6 +31,9 @@ body{
 .picked-colors{
     margin: 10px 15px;
 }
+.hide{
+    display: none;
+}
 .picked-colors header{
     display: flex;
     justify-content: space-between;
@@ -43,12 +43,12 @@ body{
     cursor: pointer;
     font-size: 0.9rem;
 }
-.all-color{
+.all-colors{
     margin: 10px;
     display: flex;
     flex-wrap: wrap;
 }
-.all-color .color{
+.all-colors .color{
     cursor: pointer;
     list-style: none;
     display: flex;
@@ -56,15 +56,16 @@ body{
     margin-bottom: 10px;
 }
 .color .rect{
-    display: block;
+    display: inline-block;
     height: 22px;
     width: 22px;
     margin-right: 8px;
     border-radius: 5px;
-    background: #5372f0;
+    border: 1px solid #2e2e2e;
 }
-.all-color .color .value{
+.all-colors .color .value{
     font-size: 0.96rem;
     font-weight: 500;
+    line-height: 22px;
     text-transform: uppercase;
 }
